# release-plz

./: .dockerignore  .gitignore  .lycheeignore  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  changelog-format.html  config.html  deny.toml  docs.html  faq.html  github-action.html  index.html  installation.html  pricing.html  print.html  quickstart_code.html  release-plz.toml  search-index.json  search.html  searchindex.js  searchindex.json  semver-check.html  sitemap.xml  why.html
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  mergify.yml  renovate.json  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  book-cd.yml  book-ci.yml  cargo-assist.yml  cd-check.yml  cd.yml  ci.yml  deny.yml  docker-develop.yml  docker.yml  links.yml  release-plz.yml  website-cd.yml  website-ci.yml
.schema/: README.md  latest.json
assets/css/: styles.22439f14.css  styles.35863669.css  styles.3c9da833.css  styles.51936a12.css  styles.597563e0.css  styles.d4ed1e9a.css  styles.da1595a3.css  styles.ef84e3d3.css  styles.f09baf23.css  styles.f24d6213.css  styles.f255eda9.css  styles.f8079fd1.css  styles.fb009b51.css  styles.fe17e28a.css
assets/js/: 0058b4c6.243e136f.js  0058b4c6.60fefe8f.js  0058b4c6.7412fa5a.js  0058b4c6.bdcf40c3.js  0058b4c6.ce919994.js  0058b4c6.cfd313f4.js  0058b4c6.f9fe8fc4.js  00add36a.0eca0253.js  00add36a.14e62510.js  00add36a.3f40f371.js  00add36a.750f2133.js  00add36a.8e6325ec.js  00add36a.92b09d2b.js  00add36a.f42a47be.js  03fffe4d.161a6bb5.js  03fffe4d.3598b032.js  03fffe4d.52aa3728.js  03fffe4d.7acf51ee.js  03fffe4d.855efe3e.js  03fffe4d.9d633ed4.js  03fffe4d.b00b1820.js  03fffe4d.bfd08a5b.js  03fffe4d.c4caa0dc.js  0480b142.02127c67.js  0480b142.02b236d5.js  0480b142.2c059645.js  0480b142.349a8600.js  0480b142.489bcf82.js  0480b142.5bd682a5.js  0480b142.602ef693.js  0480b142.6cb982fe.js  0480b142.917575d0.js  0480b142.9ac8051a.js  0480b142.b2aa405a.js  0480b142.c7b5408a.js  0480b142.d2f18650.js  0480b142.ec9eb989.js  088fadd7.0898870e.js  088fadd7.13e12f25.js  088fadd7.1d911cb1.js  (+693 more)
crates/cargo_utils/: CHANGELOG.md  Cargo.toml  README.md
crates/cargo_utils/src/: dependency.rs  fs_utils.rs  lib.rs  local_manifest.rs  local_package.rs  manifest.rs  registry.rs  token.rs  version.rs  workspace_members.rs
crates/gh_commit/: Cargo.toml
crates/gh_commit/src/: main.rs
crates/git_cmd/: CHANGELOG.md  Cargo.toml  README.md
crates/git_cmd/src/: cmd.rs  lib.rs  test_fixture.rs
crates/next_semver/: Cargo.toml  README.md
crates/next_semver/src/: lib.rs  next_version.rs  version_increment.rs
crates/next_semver/tests/all/: main.rs
crates/next_version/: CHANGELOG.md  Cargo.toml  README.md
crates/next_version/src/: config.rs  lib.rs  next_version.rs  version_increment.rs  version_updater.rs
crates/next_version/tests/all/: main.rs  normal.rs  pre_release.rs
crates/release_plz/: CHANGELOG.md  Cargo.toml  oranda.json
crates/release_plz/src/: args.rs  changelog_config.rs  config.rs  download.rs  fs_utils.rs  generate_schema.rs  git.rs  init.rs  lib.rs  log.rs  main.rs  update.rs  update_checker.rs  version.rs
crates/release_plz/src/args/: amend_changelog.rs  config_command.rs  generate_completions.rs  init.rs  manifest_command.rs  mod.rs  release.rs  release_pr.rs  repo_command.rs  set_version.rs  update.rs
crates/release_plz/src/init/: gh.rs  mod.rs
crates/release_plz/tests/all/: changelog.rs  completion_test.rs  logs.rs  main.rs  release.rs  release_pr.rs  set_version.rs
crates/release_plz/tests/all/helpers/: assert_2xx.rs  cmd.rs  context.rs  fake_utils.rs  gitea.rs  gitea_client.rs  mod.rs  reqwest_utils.rs  test_context.rs
crates/release_plz/tests/all/helpers/gitea/: gitea_client.rs  gitea_new.rs  mod.rs
crates/release_plz_core/: CHANGELOG.md  Cargo.toml  README.md
crates/release_plz_core/src/: backend.rs  cargo.rs  cargo_vcs_info.rs  changelog.rs  changelog_config.rs  changelog_filler.rs  changelog_header.rs  changelog_parser.rs  cmd.rs  copy_dir.rs  diff.rs  download.rs  fs_utils.rs  git.rs  gitea_client.rs  github_client.rs  gitlab_client.rs  lib.rs  lock_compare.rs  next_ver.rs  package_compare.rs  package_path.rs  pr.rs  pr_parser.rs  project.rs  published_packages.rs  registry_packages.rs  release.rs  release_order.rs  release_pr.rs  repo_url.rs  repo_versions.rs  semver_check.rs  strip_prefix.rs  temp_dir.rs  tera.rs  tmp_repo.rs  toml_compare.rs  update.rs  update_checker.rs  (+1 more)
crates/release_plz_core/src/clone/: cloner_builder.rs  mod.rs  source.rs
crates/release_plz_core/src/command/: mod.rs  release.rs  release_pr.rs  set_version.rs  update.rs
crates/release_plz_core/src/git/: backend.rs  gitea_client.rs  github_client.rs  github_graphql.rs  gitlab_client.rs  mod.rs
crates/release_plz_core/src/published_packages/: git_tags.rs  mod.rs  registry.rs
crates/release_plz_core/tests/all/: git_only.rs  gitea_client.rs  main.rs  release_pr.rs  update.rs
crates/release_plz_core/tests/all/helpers/: comparison_test.rs  git_only_test.rs  gitea.rs  gitea_mock_server.rs  github_mock_server.rs  mod.rs  user_mock.rs
crates/test_logs/: CHANGELOG.md  Cargo.toml  README.md
crates/test_logs/src/: lib.rs
docs/: assets.html  book.toml  changelog-format.html  changelog.html  config.html  extra.html  faq.html  github.html  media.html  release-plz-in-the-wild.html  semver-check.html  troubleshooting.html  usage.html  why.html
examples/: default.toml  detailed.toml  keepachangelog.toml  styled-scoped.toml
extra/: index.html  releasing-binaries.html  single-changelog.html  yanked-packages.html
fixtures/typo-in-overrides/: Cargo.toml
github/: index.html  trigger.html  update.html
js/: posthog.js
src/: git.rs  main.rs  version.rs
tests/: docker-compose.yml
usage/: index.html  release-pr.html  release.html  shell-completions.html  update.html
website/: .markdownlint.yaml  .prettierignore  .prettierrc.js  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
(+119 files in other folders)
