[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.80"
assert_cmd = "2.0.13"
async-trait = "0.1.77"
base64 = "0.21.7"
cargo_metadata = "0.18.1"
cargo = { version = "0.76.0", default-features = false }
chrono = { version = "0.4.31", default-features = false }
clap = "4.5.1"
clap_complete = "4.5.1"
conventional_commit_parser = "0.9.4"
crates-index = { version = "2.5.1", features = ["git", "sparse", "git-https"] }
dirs = "5.0.1"
dunce = "1.0.4"
duration-str = { version = "0.7.1", default-features = false }
expect-test = "1.4.1"
fake = "2.9.2"
git-cliff-core = { version = "1.4.0", default-features = false }
git-url-parse = "0.4.4"
http = "0.2.11"
ignore = "0.4.22"
lazy_static = "1.4.0"
once_cell = "1.19.0"
# TODO remove this when next version of openssl compiles on mac-12
openssl = "=0.10.63"
parse-changelog = { version = "0.6.4", default-features = false }
pretty_assertions = "1.4.0"
rayon = "1.8.1"
regex = "1.10.3"
reqwest = "0.11.24"
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"
schemars = { version = "0.8.16", features = ["url"] }
secrecy = "0.8.0"
semver = "1.0.22"
serde = "1.0.196"
serde_json = "1.0.113"
strip-ansi-escapes = "0.2.0"
tempfile = "3.9.0"
tera = "1.19.1"
tokio = "1.36.0"
toml = { version = "0.8.9" }
toml_edit = { version = "0.22.6" }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
url = { version = "2.5.0", default-features = false }
walkdir = "2.4.0"
wiremock = "0.5.22"

[workspace.lints.clippy]
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
cast_lossless = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
decimal_literal_representation = "warn"
default_trait_access = "warn"
doc_markdown = "warn"
exit = "warn"
expl_impl_clone_on_copy = "warn"
explicit_into_iter_loop = "warn"
filetype_is_file = "warn"
filter_map_next = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
get_unwrap = "warn"
implicit_clone = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_underscore_must_use = "warn"
let_unit_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_ok_or = "warn"
manual_let_else = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
match_bool = "warn"
match_on_vec_items = "warn"
match_same_arms = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
mut_mut = "warn"
needless_continue = "warn"
option_option = "warn"
ptr_as_ptr = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
rc_buffer = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
string_to_string = "warn"
trait_duplication_in_bounds = "warn"
trivially_copy_pass_by_ref = "warn"
type_repetition_in_bounds = "warn"
unicode_not_nfc = "warn"
unneeded_field_pattern = "warn"
unreadable_literal = "warn"
unsafe_derive_deserialize = "warn"
unseparated_literal_suffix = "warn"
unused_self = "warn"
used_underscore_binding = "warn"
verbose_file_reads = "warn"
zero_sized_map_values = "warn"
