[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.94"
assert_cmd = "2.0.16"
base64 = "0.22.1"
# needed to make git-cliff compile
cacache = { version = "13.1.0", features = ["tokio-runtime"], default-features = false}
camino = "1.1.9"
cargo_metadata = "0.19.1"
cargo = { version = "0.84.0", default-features = false }
chrono = { version = "0.4.38", default-features = false }
clap = "4.5.23"
clap_complete = "4.5.38"
conventional_commit_parser = "0.9.4"
crates-index = { version = "3.3.0", features = ["git", "sparse", "git-https"] }
dirs = "5.0.1"
dunce = "1.0.5"
duration-str = { version = "0.12.0", default-features = false }
expect-test = "1.5.0"
fake = "3.0.1"
fs-err = "3.0.0"
git-cliff-core = { version = "2.7.0", default-features = false }
git-url-parse = "0.4.5"
http = "1.2.0"
ignore = "0.4.23"
itertools = "0.14.0"
lazy_static = "1.5.0"
once_cell = "1.20.2"
parse-changelog = { version = "0.6.10", default-features = false }
pretty_assertions = "1.4.1"
rayon = "1.10.0"
rand = "0.8.5"
regex = "1.11.1"
reqwest = "0.12.9"
reqwest-middleware = { version = "0.4.0", features = ["json"] }
reqwest-retry = "0.7.0"
schemars = { version = "0.8.21", features = ["url"] }
secrecy = "0.10.3"
semver = "1.0.23"
serde = "1.0.215"
serde_json = "1.0.133"
strip-ansi-escapes = "0.2.0"
tempfile = "3.14.0"
tera = "1.20.0"
tokio = "1.42.0"
toml = { version = "0.8.19" }
toml_edit = { version = "0.22.22" }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"
url = "2.5.4"
walkdir = "2.5.0"
wiremock = "0.6.2"

[workspace.lints.clippy]
as_underscore = "warn"
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
cargo_common_metadata = "warn"
cast_lossless = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
default_trait_access = "warn"
doc_markdown = "warn"
exit = "warn"
expl_impl_clone_on_copy = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filetype_is_file = "warn"
filter_map_next = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
get_unwrap = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_underscore_must_use = "warn"
let_unit_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
match_bool = "warn"
match_on_vec_items = "warn"
match_same_arms = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
mut_mut = "warn"
needless_continue = "warn"
needless_pass_by_value = "warn"
option_option = "warn"
ptr_as_ptr = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
rc_buffer = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
string_to_string = "warn"
trait_duplication_in_bounds = "warn"
trivially_copy_pass_by_ref = "warn"
type_repetition_in_bounds = "warn"
unicode_not_nfc = "warn"
uninlined_format_args = "warn"
unneeded_field_pattern = "warn"
unreadable_literal = "warn"
unsafe_derive_deserialize = "warn"
unseparated_literal_suffix = "warn"
unused_self = "warn"
used_underscore_binding = "warn"
verbose_file_reads = "warn"
zero_sized_map_values = "warn"

# Allowing optional lints has no effect, but we list them to
# make clear that we reviewed them and we decided to allow them
decimal_literal_representation = "allow"
map_unwrap_or = "allow"
needless_raw_string_hashes = "allow"
redundant_else = "allow"
