[package]
name = "cargo_utils"
version = "0.1.14"
edition = "2021"
description = "Utilities around cargo and Rust workspaces"
repository = "https://github.com/MarcoIeni/release-plz/tree/main/crates/cargo_utils"
license = "MIT OR Apache-2.0"
keywords = ["cargo", "utilities", "utils", "workspace"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
cargo_metadata.workspace = true
dirs.workspace = true
dunce.workspace = true
toml.workspace = true
toml_edit.workspace = true
semver.workspace = true
url.workspace = true
serde.workspace = true
