[package]
name = "cargo_utils"
version = "0.1.33"
edition = "2021"
description = "Utilities around cargo and Rust workspaces"
repository = "https://github.com/MarcoIeni/release-plz/tree/main/crates/cargo_utils"
license = "MIT OR Apache-2.0"
keywords = ["cargo", "utilities", "utils", "workspace"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
cargo_metadata.workspace = true
dirs.workspace = true
dunce.workspace = true
toml.workspace = true
toml_edit.workspace = true
semver.workspace = true
url.workspace = true
serde.workspace = true
