[package]
name = "cargo_utils"
version = "0.1.41"
edition.workspace = true
description = "Utilities around cargo and Rust workspaces"
repository = "https://github.com/MarcoIeni/release-plz/tree/main/crates/cargo_utils"
license.workspace = true
keywords = ["cargo", "utilities", "utils", "workspace"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
cargo_metadata.workspace = true
dirs.workspace = true
dunce.workspace = true
toml.workspace = true
toml_edit.workspace = true
semver.workspace = true
url.workspace = true
serde.workspace = true
