[package]
name = "git_cmd"
version = "0.2.0"
edition = "2021"
description = "Wrapper around git cli"
repository = "https://github.com/MarcoIeni/release-plz/tree/main/crates/git_cmd"
license = "MIT OR Apache-2.0"
keywords = ["git", "command", "cli", "wrapper", "shell"]
categories = ["development-tools", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test_fixture = []

[dependencies]
tracing = "0.1.36"
anyhow = "1.0.58"

[dev-dependencies]
tempfile = "3.3.0"

test_logs = { path = "../test_logs" }
git_cmd = { path = ".", features = ["test_fixture"]}
claim = "0.5.0"
