[package]
name = "git_cmd"
version = "0.4.17"
edition = "2021"
description = "Wrapper around git cli"
repository = "https://github.com/MarcoIeni/release-plz/tree/main/crates/git_cmd"
license = "MIT OR Apache-2.0"
keywords = ["git", "command", "cli", "wrapper", "shell"]
categories = ["development-tools", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[features]
test_fixture = []

[dependencies]
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
git_cmd = { path = ".", features = ["test_fixture"]}
test_logs = { path = "../test_logs" }

tempfile.workspace = true
