[package]
name = "next_semver"
version = "0.1.0"
edition = "2021"
description = "Determine next semantic version based on conventional commits"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MarcoIeni/release-plz/crates/next_semver"
keywords = ["semver", "semantic", "versioning", "conventional", "commits"]
categories = ["development-tools", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = "1"
conventional_commit_parser = "0.9"
cargo-edit = "0.8"
