[package]
name = "next_version"
version = "0.2.15"
edition.workspace = true
description = "Determine next semantic version based on conventional commits"
license.workspace = true
repository = "https://github.com/MarcoIeni/release-plz/tree/main/crates/next_version"
keywords = ["semver", "semantic", "versioning", "conventional", "commits"]
categories = ["development-tools", "parsing"]

[lints]
workspace = true

[dependencies]
semver.workspace = true
conventional_commit_parser.workspace = true
