[package]
name = "release-plz"
version = "0.3.38"
edition = "2021"
description = "Update version and changelog based on semantic versioning and conventional commits"
repository = "https://github.com/MarcoIeni/release-plz"
homepage = "https://release-plz.ieni.dev/"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
keywords = ["release", "please", "semver", "conventional", "commits"]
categories = ["command-line-utilities", "development-tools"]

[lints]
workspace = true

[features]
default = ["docker-tests"]
# Run tests that need a docker runtime to be executed
docker-tests = []

[dependencies]
git_cmd = { path = "../git_cmd", version = "0.4.17" }
release_plz_core = { path = "../release_plz_core", version = "0.15.5" }
cargo_utils = { path = "../cargo_utils", version = "0.1" }
fake_package = { path = "../fake_package", version = "0.1" }

anyhow.workspace = true
base64.workspace = true
cargo_metadata.workspace = true
chrono = { workspace = true, features = ["clock"] }
clap = { workspace = true, features = ["derive", "env"] }
clap_complete.workspace = true
dirs.workspace = true
duration-str.workspace = true
git-cliff-core.workspace = true
reqwest.workspace = true
schemars.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-log.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
cargo_utils = { path = "../cargo_utils" }
test_logs = { path = "../test_logs" }

assert_cmd.workspace = true
async-trait.workspace = true
fake.workspace = true
expect-test.workspace = true
serde_json.workspace = true
tempfile.workspace = true
toml_edit.workspace = true
