[package]
name = "release-plz"
version = "0.3.59"
edition.workspace = true
description = "Update version and changelog based on semantic versioning and conventional commits"
repository = "https://github.com/MarcoIeni/release-plz"
homepage = "https://release-plz.ieni.dev/"
license.workspace = true
readme = "../../README.md"
keywords = ["release", "please", "semver", "conventional", "commits"]
categories = ["command-line-utilities", "development-tools"]

[lints]
workspace = true

[features]
default = ["docker-tests", "all-static"]
# Run tests that need a docker runtime to be executed
docker-tests = []
all-static = ["release_plz_core/all-static"]

[dependencies]
git_cmd = { path = "../git_cmd", version = "0.6.3" }
release_plz_core = { path = "../release_plz_core", version = "0.21.0", default-features = false }
cargo_utils = { path = "../cargo_utils", version = "0.1" }

anyhow.workspace = true
base64.workspace = true
cargo_metadata.workspace = true
chrono = { workspace = true, features = ["clock"] }
clap = { workspace = true, features = ["derive", "env"] }
clap_complete.workspace = true
dirs.workspace = true
duration-str.workspace = true
fs-err.workspace = true
git-cliff-core.workspace = true
regex.workspace = true
reqwest.workspace = true
schemars.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-log.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
cargo_utils = { path = "../cargo_utils" }
test_logs = { path = "../test_logs" }
fake_package = { path = "../fake_package" }

assert_cmd.workspace = true
async-trait.workspace = true
fake.workspace = true
expect-test.workspace = true
pretty_assertions.workspace = true
serde_json.workspace = true
tempfile.workspace = true
toml_edit.workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/release-plz-v{ version }/{ name }-{ target }{ archive-suffix }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"
