[package]
name = "release_plz_core"
version = "0.5.6"
edition = "2021"
description = "Update version and changelog based on semantic versioning and conventional commits"
repository = "https://github.com/MarcoIeni/release-plz/tree/main/crates/release_plz_core"
license = "MIT OR Apache-2.0"
keywords = ["release", "please", "semver", "conventional", "commits"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_utils = { path = "../cargo_utils", version = "0.1.14" }
git_cmd = { path = "../git_cmd", version = "0.3.0" }
next_version = { path = "../next_version", version = "0.2.3" }

anyhow.workspace = true
cargo_metadata.workspace = true
cargo.workspace = true
chrono = { workspace = true, features = ["clock"] }
crates-index.workspace = true
dunce.workspace = true
fs_extra.workspace = true
git-cliff.workspace = true
git-cliff-core.workspace = true
git-url-parse.workspace = true
parse-changelog.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["json"] }
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
secrecy.workspace = true
serde = { workspace = true, features = ["derive"] }
tempfile.workspace = true
tracing.workspace = true
url = { workspace = true, features = ["serde"] }
walkdir.workspace = true
toml_edit.workspace = true
serde_json.workspace = true
strip-ansi-escapes.workspace = true

[dev-dependencies]
git_cmd = { path = "../git_cmd", features = ["test_fixture"] }
test_logs = { path = "../test_logs" }
fake_package = { path = "../fake_package" }

expect-test.workspace = true
fake.workspace = true
tokio = { workspace = true, features = ["macros"] }
wiremock.workspace = true
