[package]
name = "test_logs"
version = "0.1.8"
edition = "2021"
description = "Library to see logs in tests"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MarcoIeni/release-plz/tree/main/crates/test_logs"
keywords = ["test", "logs", "tracing"]
categories = ["development-tools", "development-tools::testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.16.0"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tracing-log = "0.1.3"
