[package]
name = "test_logs"
version = "0.1.25"
edition.workspace = true
description = "Library to see logs in tests"
license.workspace = true
repository = "https://github.com/MarcoIeni/release-plz/tree/main/crates/test_logs"
keywords = ["test", "logs", "tracing"]
categories = ["development-tools", "development-tools::testing"]

[lints]
workspace = true

[dependencies]
once_cell.workspace = true
tracing-log.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
