[package]
name = "typo_test"
version = "0.1.0"
edition = "2021"
description = "Check for typos in overrides"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MarcoIeni/release-plz/tree/main/crates/next_version"
keywords = ["semver", "semantic", "versioning", "conventional", "commits"]
categories = ["development-tools", "parsing"]

[workspace]

[[bin]]
name = "typo_test"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
