[package]
name = "typo_test"
version = "0.1.0"
edition.workspace = true
description = "Check for typos in overrides"
license.workspace = true
repository = "https://github.com/MarcoIeni/release-plz/tree/main/crates/next_version"
keywords = ["semver", "semantic", "versioning", "conventional", "commits"]
categories = ["development-tools", "parsing"]

[workspace]

[[bin]]
name = "typo_test"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
